black border top & circle tags behind control correct

--- a/page.css
+++ b/page.css
@@ -5,6 +5,7 @@ body {
 
 /* navigation bar */
 .navbar {
+  border-top: 25px solid #000000;
   background: #0080ff; /* blue */
   margin-bottom:0;
   border-radius: 0;
@@ -178,35 +179,36 @@ del {
 }
 
 #slider-left-control, #slider-right-control {
+  position: relative;
   height: 384.8px; /* same height for slider controls and images */
   margin-top: 30px; /* used to position sale circle tags */
   margin-bottom: 30px; /* used to position sale circle tags */
 }
 
 #slider-left-control > div {
-  position: relative; /* used to vertically center arrows */
+  position: absolute; /* used to vertically center arrows */
   z-index: 1; /* used so that sale-circle-tag is behind control */
   width: 50px;
   height: 384.8px;
   border: 3px solid #f9f9f9;
   background: #ffffff; /* used so that sale-circle-tag is behind control */
   top: 50%;
-  left: 100%; /* used to position left control */
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  right: 0; /* used to position left control */
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 
 #slider-right-control > div {
-  position: relative; /* used to vertically center arrows */
+  position: absolute; /* used to vertically center arrows */
   z-index: 1; /* used so that sale-circle-tag is behind control */
   width: 50px;
   height: 384.8px;
   border: 3px solid #f9f9f9;
   background: #ffffff; /* used so that sale-circle-tag is behind control */
   top: 50%;
-  left: 10%; /* used to position right control */
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  left: 0; /* used to position right control */
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 
 /* used to vertically center arrows */
